Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-13575

On failure, Mariabackup --backup --safe-slave-backup may forget to START SLAVE SQL_THREAD

    XMLWordPrintable

Details

    Description

      In Mariabackup, the function backup_start() that is invoked by xtrabackup_backup_func() that implements the --backup option is performing some steps that should be undone even in case of a failure. These steps are currently executed at the start of the function backup_finish() which should be invoked after a successful operation only:

      	/* release all locks */
      	if (!opt_no_lock) {
      		unlock_all(mysql_connection);
      		history_lock_time = 0;
      	} else {
      		history_lock_time = time(NULL) - history_lock_time;
      	}
       
      	if (opt_safe_slave_backup && sql_thread_started) {
      		msg("Starting slave SQL thread\n");
      		xb_mysql_query(mysql_connection,
      				"START SLAVE SQL_THREAD", false);
      	}
      

      These steps, especially the START SLAVE SQL_THREAD, should be invoked also after a failed operation.

      Attachments

        Issue Links

          Activity

            People

              wlad Vladislav Vaintroub
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 1h
                  1h
                  Remaining:
                  Remaining Estimate - 1h
                  1h
                  Logged:
                  Time Spent - Not Specified
                  Not Specified

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.